# auscientum

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-linux-platform.yml
include/: stdwx.h
res/: btn-pause.xpm  btn-play.xpm
src/: App.cpp  App.hpp  AppState.cpp  AppState.hpp  AudioPlayer.cpp  AudioPlayer.hpp  BookList.cpp  BookList.hpp  BookView.cpp  BookView.hpp  Bookmark.cpp  Bookmark.hpp  ChapterList.cpp  ChapterList.hpp  ChapterView.cpp  ChapterView.hpp  Config.cpp  Config.hpp  MainFrame.cpp  MainFrame.hpp  Player.cpp  Player.hpp  PlayerPanel.cpp  PlayerPanel.hpp  UnpackThread.cpp  UnpackThread.hpp
src/archive/: BookStore.cpp  BookStore.hpp  ZipStore.cpp  ZipStore.hpp
src/audio/: Duration.cpp  Duration.hpp  Tag.cpp  Tag.hpp
src/common/: Hash.hpp
src/compat/: Hash.cpp  Hash.hpp  StopWatch.cpp  StopWatch.hpp  ZipArchive.cpp  ZipArchive.hpp  fsx.cpp  fsx.hpp  str.cpp  str.hpp  xdg.cpp  xdg.hpp  zip.cpp  zip.hpp
src/meta/: Book.cpp  Book.hpp  Chapter.cpp  Chapter.hpp
src/repo/: BookmarkRepo.cpp  BookmarkRepo.hpp
tests/: test_hash.cpp
